--- a/client/package.json
+++ b/client/package.json
@@ -28,28 +28,11 @@
   "dependencies": {
     "@apollo/client": "3.3.7",
     "@apollo/react-hooks": "4.0.0",
+    "@apollo/react-testing": "4.0.0",
     "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.57",
     "@sentry/browser": "6.0.3",
-    "clsx": "1.1.1",
-    "firebase": "8.2.5",
-    "graphql": "15.5.0",
-    "graphql-tag": "2.11.0",
-    "query-string": "6.13.8",
-    "react": "17.0.1",
-    "react-apollo": "3.1.5",
-    "react-copy-to-clipboard": "5.0.3",
-    "react-dom": "17.0.1",
-    "react-helmet": "6.1.0",
-    "react-hook-form": "6.14.2",
-    "react-markdown": "5.0.3",
-    "react-router-dom": "5.2.0",
-    "react-visibility-sensor": "5.1.1",
-    "subscriptions-transport-ws": "0.9.18"
-  },
-  "devDependencies": {
-    "@apollo/react-testing": "4.0.0",
     "@types/firebase": "3.2.1",
     "@types/jest": "26.0.22",
     "@types/query-string": "6.3.0",
@@ -60,7 +43,7 @@
     "@types/react-router-dom": "5.1.7",
     "@typescript-eslint/eslint-plugin": "4.19.0",
     "@typescript-eslint/parser": "4.19.0",
-    "cypress": "6.3.0",
+    "clsx": "1.1.1",
     "env-cmd": "10.1.0",
     "eslint": "7.23.0",
     "eslint-plugin-flowtype": "5.4.0",
@@ -70,15 +53,32 @@
     "eslint-plugin-security": "1.4.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "fibers": "5.0.0",
+    "firebase": "8.2.5",
     "firebase-tools": "9.2.2",
+    "graphql": "15.5.0",
+    "graphql-tag": "2.11.0",
     "node-sass": "5.0.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.2.1",
     "prettier-package-json": "2.1.3",
+    "query-string": "6.13.8",
+    "react": "17.0.1",
+    "react-apollo": "3.1.5",
+    "react-copy-to-clipboard": "5.0.3",
+    "react-dom": "17.0.1",
+    "react-helmet": "6.1.0",
+    "react-hook-form": "6.14.2",
+    "react-markdown": "5.0.3",
+    "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
+    "react-visibility-sensor": "5.1.1",
     "sass": "1.32.5",
     "serve": "11.3.2",
+    "subscriptions-transport-ws": "0.9.18",
     "typescript": "4.1.3"
+  },
+  "devDependencies": {
+    "cypress": "6.3.0"
   },
   "engines": {
     "node": "14.x"
