build(server): optimize binary size

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "format:client": "cd client && npm run format && npm run format:package",
     "format:gql": "cd graphql && npm run format && npm run format:package",
     "format:server": "cd server && npm run format && npm run format:package",
-    "heroku-cleanup": "rm -rf node_modules",
-    "heroku-postbuild": "cd server && npm ci && npm run build",
-    "heroku-prebuild": "cd graphql && npm ci --only=production && npm run generate && rm -rf node_modules",
+    "heroku-cleanup": "rm -rf node_modules graphql client",
+    "heroku-postbuild": "cd server && npm ci && npm run build && npm run knex migrate:latest && npm ci --only=production",
+    "heroku-prebuild": "cd graphql && npm ci --only=production && npm run generate",
     "postinstall": "husky install && chmod +x ./.husky/pre-commit",
     "start": "concurrently -n graphql,server,client -c magenta.bold,green.bold,cyan.bold npm:start:gql npm:start:server npm:start:client",
     "start:client": "npm run wait:client && cd client && npm start",
